@@ -1,20 +1,19 @@
-<?xml version="1.0"?>
 <Rotation>
 	<Rotation>
-		<PlagueStrike retry='1'></PlagueStrike>
-		<IcyTouch retry='1'></IcyTouch>
-		<ScourgeStrike retry='1'></ScourgeStrike>
-		<BloodStrike retry='1'></BloodStrike>
-		<BloodStrike retry='1'></BloodStrike>
-		<DeathCoil retry='0'></DeathCoil>
-		<DeathCoil retry='0'></DeathCoil>
-		<ScourgeStrike retry='1'></ScourgeStrike>
-		<DeathCoil retry='0'></DeathCoil>
-		<ScourgeStrike retry='1'></ScourgeStrike>
-		<DeathCoil retry='0'></DeathCoil>
-		<ScourgeStrike retry='1'></ScourgeStrike>
-		<DeathCoil retry='0'></DeathCoil>
-		<DeathCoil retry='0'></DeathCoil>
+		<PlagueStrike retry="1" />
+		<IcyTouch retry="1" />
+		<BloodStrike retry="1" />
+		<BloodStrike retry="1" />
+		<ScourgeStrike retry="1" />
+		<DeathCoil retry="0" />
+		<DeathCoil retry="0" />
+		<ScourgeStrike retry="1" />
+		<Horn retry="1" />
+		<ScourgeStrike retry="1" />
+		<ScourgeStrike retry="1" />
+		<DeathCoil retry="0" />
+		<DeathCoil retry="0" />
 	</Rotation>
 </Rotation>
+
 
